[metadata]
name = iomirror
version = 0.1
summary = Hybrid Cloud FusionSphere iomirror service
description-file =
    README.md

author = Huawei
home-page = http://www.huawei.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    driver
    dra
#data_files =

[entry_points]
#console_scripts =

